solved test issue

--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="flex-sb-m w-full p-b-48">
-          <button class="login100-form-btn" (click)="loginClick()">
+          <button class="login100-form-btn" (click)="loginClick(uName)">
             Login
           </button>
           <div>
